[package]
name = "embassy-blink"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "1.0"
defmt-rtt = "1.2.0"
embedded-io-async = "0.7.0"
tmc2209 = "0.2.2"
embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "defmt"] }
embassy-futures = "0.1.2"
embassy-rp = { version = "0.10.0", features = ["defmt", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-time = "0.5.1"
panic-probe = { version = "1.0.0", features = ["defmt"] }
embassy-usb-logger = "0.6.0"
log = "0.4.33"
